feat: 新增验证器，日志替换为 zerolog
