# docs/swagger.json
@@ -7,7 +7,7 @@
     },
     "paths": {
         "/api/cli/module/create": {
-            "get": {
+            "post": {
                 "description": "get string by ID",
                 "consumes": [
                     "application/json"
@@ -21,26 +21,46 @@
                 "summary": "创建模块",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "模块名称",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/cli.CreateModuleBody"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "res",
+                        "description": "resp",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/jsonutil.ResponseData"
+                                    "$ref": "#/definitions/resp.Result"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
                                             "type": "boolean"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "resp",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/resp.Result"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -69,13 +89,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateUserBody"
+                            "$ref": "#/definitions/user.CreateUserBodyDto"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "res"
+                        "description": "resp"
                     }
                 }
             }
@@ -94,7 +114,7 @@
                 "summary": "用户列表",
                 "responses": {
                     "200": {
-                        "description": "res",
+                        "description": "resp",
                         "schema": {
                             "type": "string"
                         }
@@ -104,7 +124,16 @@
         }
     },
     "definitions": {
-        "jsonutil.ResponseData": {
+        "cli.CreateModuleBody": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "模块名称",
+                    "type": "string"
+                }
+            }
+        },
+        "resp.Result": {
             "type": "object",
             "properties": {
                 "code": {
@@ -116,8 +145,11 @@
                 }
             }
         },
-        "user.CreateUserBody": {
+        "user.CreateUserBodyDto": {
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
                 "name": {
                     "type": "string"
