# modules/user/user_controller.go
@@ -1,11 +1,10 @@
 package user
 
 import (
-	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
-	"net/http"
-	"selfserver/utils/jsonutil"
+	"selfserver/lib/validate"
+	"selfserver/utils/resp"
 )
 
 type Controller struct {
@@ -21,35 +20,33 @@ func Register(e *gin.Engine) {
 	router.POST("/create", controller.Create)
 }
 
-// FindList godoc
+// FindList
 //
 //	@Summary	用户列表
 //	@Tags		user
 //	@Accept		json
 //	@Produce	json
-//	@Success	200	{object}	string	"res"
+//	@Success	200	{object}	string	"resp"
 //	@Router		/api/user/list [get]
 func (c *Controller) FindList(ctx *gin.Context) {
 	list := c.service.GetList()
-	ctx.JSON(http.StatusOK, jsonutil.SuccessResponse(list, "success"))
+	ctx.JSON(resp.Succ(list))
 }
 
-type CreateUserBody struct {
-	Name string `json:"name"`
-}
-
-// Create godoc
+// Create
 //
 //	@Summary	创建用户
 //	@Tags		user
 //	@Accept		json
 //	@Produce	json
-//	@Param		name	body		CreateUserBody	true	"ID"
-//	@Success	200		{object}	nil	"res"
+//	@Param		name	body		CreateUserBodyDto	true	"ID"
+//	@Success	200		{object}	nil					"resp"
 //	@Router		/api/user/create [post]
 func (c *Controller) Create(ctx *gin.Context) {
-	var body CreateUserBody
-	ctx.ShouldBindBodyWith(&body, binding.JSON)
-	fmt.Printf("Create: %+v\n", body)
-	ctx.JSON(http.StatusOK, jsonutil.SuccessResponse(nil, "success"))
+	var body CreateUserBodyDto
+	if err := ctx.ShouldBindBodyWith(&body, binding.JSON); err != nil {
+		ctx.JSON(resp.ParamErr(validate.ErrTransform(err)))
+		return
+	}
+	ctx.JSON(resp.Succ(nil))
 }
