# modules/user/user_dto.go
@@ -1,0 +1,5 @@
+package user
+
+type CreateUserBodyDto struct {
+	Name string `json:"name" binding:"required"`
+}
